Add endpoint that fetches all Metadataentries for Manga
